cmake_minimum_required( VERSION 2.8 )
project(TkTextPlus)

# The version number.
set (TKTEXTPLUS_VERSION_MAJOR 0)
set (TKTEXTPLUS_VERSION_MINOR 1)
set (TKTEXTPLUS_VERSION_PATCH 1)
set (PACKAGE_PATCHLEVEL "${TKTEXTPLUS_VERSION_MAJOR}.${TKTEXTPLUS_VERSION_MINOR}.${TKTEXTPLUS_VERSION_PATCH}")

set(PACKAGE_NAME TkTextPlus)

find_package(TclStub REQUIRED)

execute_process(COMMAND ${TCL_TCLSH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake/find_tcllib.tcl
  RESULT_VARIABLE FIND_LIB_STATUS
  OUTPUT_VARIABLE TCL_LIBPATH)

message(STATUS "FIND_LIB_STATUS = ${FIND_LIB_STATUS}")
message(STATUS "TCL_LIBPATH = ${TCL_LIBPATH}")

if (CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
  message(STATUS "setting CMAKE_INSTALL_PREFIX to ${TCL_LIBPATH}")
  set(CMAKE_INSTALL_PREFIX ${TCL_LIBPATH})
endif()

set(DEST_DIR "TkTextPlus${TKTEXTPLUS_VERSION_MAJOR}.${TKTEXTPLUS_VERSION_MINOR}")
add_subdirectory(generic)
add_subdirectory(library)

